# Tetris

./: CMakeLists.txt
glad/: CMakeLists.txt
glad/src/: glad.c
res/shaders/main/: fragment.glsl  vertex.glsl
src/: main.cpp
src/game/: Piece.cpp  Piece.h
src/render/: Renderer.cpp  Renderer.h  WindowInfo.h
src/render/shader/: Shader.cpp  Shader.h
